--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -14,17 +14,19 @@
 			<div class="card" th:each="pedido: ${pedidos}">
 				<div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto</div>
 				<div class="card-body row">
-					<div class="col-12 col-sm-8 mb-3">	
+					<div class="col-12 col-sm-7 mb-3">	
 						<div class="row">
-							<div class="col-md-8">Valor: <span class="" th:text="${pedido.valor}">199,99</span> </div>
-							<div class="">Data da Entrega: <span  th:text="${pedido.dataEntrega}">10/02/2022</span> </div>
+							<div class="col-md-5">Valor: <span class="" th:text="${pedido.valor}">199,99</span> </div>
+							<div class="col-md-7">Data da Entrega: <span  th:text="${pedido.dataEntrega}">10/02/2022</span> </div>
 						</div>					
 						
 						<div class="">Produto: <input class="form-control" th:value="${pedido.url}" /> </div>
-						<div class="">
-							<textarea class="form-control" rows="" cols="auto" th:text="${pedido.descricao}">
-								Descrição do produto.
-							</textarea>
+						<div class="">Descrição:
+							<div class="">
+								<textarea class="form-control" rows="" cols="auto" th:text="${pedido.descricao}">
+									Descrição do produto.
+								</textarea>
+							</div>
 						</div>		
 					</div>				
 					<div class="col-12 col-sm-4">		
