--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -11,6 +11,18 @@
 	>	
 	<body>
 		<div class="container">
+			<div class="jumbotron p-5 bg-light mb-1">
+			    <h1 class="display-4">Meus Pedidos</h1>
+			</div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light ps-1 pe-3 mb-3 d-flex justify-content-between">
+				<div class="navbar-nav">
+					<a class="nav-item nav-link active" href="#">Todos</a>
+					<a class="nav-item nav-link" href="#">Aguardando</a>
+					<a class="nav-item nav-link" href="#">Aprovado</a>
+					<a class="nav-item nav-link" href="#">Entregue</a>
+				</div>
+				<a href="/pedido/formulario"><button class="btn btn-outline-secondary" type="Link">Novo</button></a>
+			</nav>			
 			<div class="card" th:each="pedido: ${pedidos}">
 				<div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto</div>
 				<div class="card-body row">
