--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -2,14 +2,22 @@
 	<head >
 		<meta charset="UTF-8" />
 		<title>Página Inicial</title>
-	</head>	
-	<link 
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-		rel="stylesheet" 
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-		crossorigin="anonymous"
-	>	
+		<link 
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+			rel="stylesheet" 
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+			crossorigin="anonymous"
+		>
+		<style type="text/css">
+			.logo-container{
+				background-color: #47bcff;
+			}
+		</style>	
+	</head>		
 	<body>
+<!-- 		<div class="logo-container"> -->
+			
+<!-- 		</div> -->
 		<div class="container">
 			<div class="jumbotron p-5 bg-light mb-1">
 			    <h1 class="display-4">Meus Pedidos</h1>
