--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -1,27 +1,9 @@
-<html>
-	<head >
-		<meta charset="UTF-8" />
-		<title>Página Inicial</title>
-		<link 
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-			rel="stylesheet" 
-			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-			crossorigin="anonymous"
-		>
-		<style type="text/css">
-			.logo-container{
-				background-color: #47bcff;
-			}
-		</style>	
-	</head>		
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head th:replace="~{base :: head}"></head>		
 	<body>
-<!-- 		<div class="logo-container"> -->
-			
-<!-- 		</div> -->
+		<div  th:replace="~{base :: logo}"></div>		
 		<div class="container">
-			<div class="jumbotron p-5 bg-light mb-1">
-			    <h1 class="display-4">Meus Pedidos</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Meus Pedidos')}"></div>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light ps-1 pe-3 mb-3 d-flex justify-content-between">
 				<div class="navbar-nav">
 					<a class="nav-item nav-link active" href="#">Todos</a>
@@ -29,9 +11,9 @@
 					<a class="nav-item nav-link" href="#">Aprovado</a>
 					<a class="nav-item nav-link" href="#">Entregue</a>
 				</div>
-				<a href="/pedido/formulario"><button class="btn btn-outline-secondary" type="Link">Novo</button></a>
+				<a href="/pedido/formulario"><button class="btn btn-outline-secondary" type="button">Novo</button></a>
 			</nav>			
-			<div class="card" th:each="pedido: ${pedidos}">
+			<div class="card mb-3" th:each="pedido: ${pedidos}">
 				<div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto</div>
 				<div class="card-body row">
 					<div class="col-12 col-sm-7 mb-3">	
