--- a/mudi/src/main/resources/templates/pedido/formulario.html
+++ b/mudi/src/main/resources/templates/pedido/formulario.html
@@ -1,17 +1,9 @@
-<!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8" />
-	</head>	
-	<link 
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-		rel="stylesheet" 
-	>	
+	<head th:replace="~{base :: head}"></head>	
 	<body>
+		<div  th:replace="~{base :: logo}"></div>		
 		<div class="container">
-			<div class="jumbotron p-5 bg-light mb-2">
-				<h1 class="display-4">Novo Pedido</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Novo Pedido')}"></div>
 			<div class="card">			
 				<form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
 					<div class="form-group">
@@ -42,7 +34,7 @@
 						<label for="descricao">Descrição</label>
 						<textarea th:field="*{descricao}" class="form-control" placeholder="Adicione detalhes importantes para ajudar o comprador."></textarea>
 					</div>
-					<button class="btn btn-primary" type="submit">Cadastrar</button>
+					<button class="btn btn-primary mt-2" type="submit">Cadastrar</button>
 				</form>
 			</div>
 		</div>
