--- a/1530-springmvc-parte1-master/src/main/resources/templates/pedido/formulario.html
+++ b/1530-springmvc-parte1-master/src/main/resources/templates/pedido/formulario.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:th="https://www.thymeleaf.org">
 	<head th:replace="~{base :: head}"></head>
 	<body>
 		<div th:replace="~{base :: logo}"></div>	
@@ -7,7 +7,7 @@
 			<div th:replace="~{base :: titulo('Meus Pedidos')}"></div>
 	
 			<div class="card mt-3">
-				<form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
+				<form th:object="${requisicaoNovoPedido}" class="card-body" th:action="@{/pedido/novo}" method="POST">
 					<div class="form-group">
 						<label for="nomeProduto">Produto</label>
 						<input th:field="*{nomeProduto}" th:errorClass="is-invalid" class="form-control" placeholder="nome do produto"/>
