--- a/1530-springmvc-parte1-master/src/main/resources/templates/oferta/home.html
+++ b/1530-springmvc-parte1-master/src/main/resources/templates/oferta/home.html
@@ -52,8 +52,13 @@
 		</div>	
 			
 		<script type="text/javascript">
-			function onload(){
-				
+			function onload(){				
+				var app = new Vue({
+					el: "#ofertas",
+					data: {
+						message: 'Hello Vue!'
+					}
+				})
 			}
 		</script>		
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
